--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
     "prisma:push": "prisma db push"
   },
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@fastify/jwt": "^8.0.1",
+    "@fastify/cors": "^11.2.0",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/multipart": "^9.4.0",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
-    "fastify": "^4.28.1"
+    "fastify": "^5.7.4",
+    "isomorphic-dompurify": "^2.3.0",
+    "mammoth": "^1.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
